--- a/facebook/index.html
+++ b/facebook/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Sign Up</title>
     <link rel="stylesheet" href="css/style.css">
+    
+    <script src="./scripts/index.js" type="text/javascript"></script>
+
 </head>
 
 <body>
@@ -41,10 +44,12 @@
                     </form>
                     <a href="#" class="forgot-link">Forgotten password?</a>
                     <div class="divider"></div>
-                    <button class="create-account-button">Create new account</button>
+                    <button id="btnCreateAccount" class="create-account-button">Create new account</button>
                 </div>
             </div>
         </div>
+
+
 
 </body>
 
